[package]
name = "pulse-stream"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/tokio.rs"
name = "tokio"

[[bin]]
path = "src/threaded.rs"
name = "threaded"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
hound = "3.5.0"
libpulse-binding = { version = "2.27.1", features = ["pa_v14"] }
libpulse-tokio = "0.1.0"
tokio = { version = "1.29.1", features = ["full"] }
